[package]
name = "aoc2020"
version = "0.1.0"
authors = ["neil <sheredom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.2"
bytecount = "0.6.2"
colour = "0.5.0"
exec_time = "0.1.4"
intbits = "0.2.0"
itertools = "0.9.0"
num-integer = "0.1.44"
regex = "1.4.2"

[profile.release]
debug = true
